<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_code" translatable="false">OBN-A12</string>
    <string name="app_name" translatable="false">CHRED on Android</string>
    <string name="target">Target</string>
    <string name="edit">Edit</string>
    <string name="palette">Palette</string>
    <string name="size">Size</string>
    <string name="view">View</string>
    <string name="share">Share</string>
    <string name="toptc">To PTC</string>
    <string name="toqr">To QR</string>
    <string name="totext">To text</string>
    <string name="dismiss">Dismiss</string>
    <string name="ename_default" translatable="false">ANDROID</string>
    <string name="qr_msg">Move #%d QR code into red frame</string>
    <string name="qr_other">Other image</string>
    <string name="qr_err_invalid">Invalid QR code.</string>
    <string name="qr_err_corrupt">Corrupt QR code.</string>
    <string name="qr_err_different">Different QR code.</string>
    <string name="qr_err_order">This is #%d QR code.</string>
    <string name="title_import">Load PTC file</string>
    <string name="title_export">Save PTC file</string>
    <string name="title_scanqr">Scan QR code</string>
    <string name="title_prefs">Preferences - CHRED on Android</string>
    <string name="menu_import">Import</string>
    <string name="menu_import_file">from PTC file</string>
    <string name="menu_import_gallery">QR code in gallery</string>
    <string name="menu_import_camera">QR code through camera</string>
    <string name="menu_import_preset">Preset data</string>
    <string name="menu_export">Export</string>
    <string name="menu_export_chr">CHR data to PTC file</string>
    <string name="menu_export_col">COL data to PTC file</string>
    <string name="menu_export_qr_chr">CHR data to QR code</string>
    <string name="menu_export_qr_col">COL data to QR code</string>
    <string name="menu_prefs">Preferences</string>
    <string name="menu_operation">Operation</string>
    <string name="menu_swap">Swap #%d for this</string>
    <string name="menu_move">Move #%d here and shift</string>
    <string name="menu_copy">Copy #%d here</string>
    <string name="menu_gradient">Make gradient</string>
    <string name="prefs_ename">File name to embed</string>
    <string name="prefs_ename_ptc">For PTC file</string>
    <string name="prefs_ename_qr">For QR code</string>
    <string name="prefs_ename_preset">Preset name</string>
    <string name="prefs_temp">Temporal files (QR code, text file)</string>
    <string name="prefs_tight">Reduce number of QR code</string>
    <string name="prefs_tight_sub">But error-correction is weaken</string>
    <string name="prefs_charset">Charset for converting PRG data</string>
    <string name="prefs_keepdays">When temp files are removed</string>
    <string name="prefs_other">Other</string>
    <string name="prefs_version">Version info</string>
    <string name="msg_newfilename">Enter the file name</string>
    <string name="msg_ename">Enter the name to embed\n(capital letters only)</string>
    <string name="msg_topdirectory">(Top directory)</string>
    <string name="msg_nofiles">No files&#8230;</string>
    <string name="msg_createfile">(New file)</string>
    <string name="msg_import">Are you sure to import \"%s\"?\n(Current data is overwritten.)</string>
    <string name="msg_overwrite">Are you sure to overwrite \"%s\"?</string>
    <string name="msg_loadptc">\"%s\" is imported successfully.</string>
    <string name="msg_saveptc">\"%s\" is exported successfully.</string>
    <string name="msg_saveqr">QR code for \"%s\" is generated successfully.</string>
    <string name="msg_savetext">Text file for \"%s\" is generated successfully.</string>
    <string name="msg_error">An error occurred during process.</string>
    <string name="msg_invalid">You entered an invalid parameter.</string>
    <string name="msg_notsupported">Sorry, \"%s\" isn\'t supported.</string>
</resources>
