<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/prefs_ename"
        >
        <ListPreference
            android:key="ename_ptc"
            android:defaultValue="const"
            android:title="@string/prefs_ename_ptc"
            android:entries="@array/ptcname_entries"
            android:entryValues="@array/ptcname_entryvalues"
            />
        <ListPreference
            android:key="ename_qr"
            android:defaultValue="const"
            android:title="@string/prefs_ename_qr"
            android:entries="@array/qrname_entries"
            android:entryValues="@array/qrname_entryvalues"
            />
        <EditTextPreference
            android:key="ename"
            android:defaultValue="ANDROID"
            android:title="@string/prefs_ename_preset"
            android:digits="0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZ_"
            android:maxLength="8"
            android:singleLine="true"
            android:inputType="textCapCharacters|textNoSuggestions|textVisiblePassword"
            />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/prefs_other"
        >
        <com.obnsoft.chred.VersionPreference
            android:key="about"
            android:persistent="false"
            android:title="@string/prefs_version"
            android:dialogLayout="@layout/about"
            android:dialogIcon="@drawable/ic_version"
            android:negativeButtonText="@null"
            />
    </PreferenceCategory>
</PreferenceScreen>
